Fix hovered row colors for data grid in forced-colors mode
This is a follow-up to
https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3753276

The change was intended to remove striping behavior for data grid rows
in high contrast mode to improve readability, and to indicate selected/
hovered rows with a highlight color.

The above change added a ":not:hover" specifier to the CSS selector
covering background color for odd-numbered data grid rows. Although
hover colors were working in high contrast, the ":not:hover" addition
meant that no rule was covering hovered elements in normal color mode,
so odd rows would flash unstyled if hovered.

Selected rows were also not quite working in high contrast. The "canvas"
rule was taking precedence over the "highlight" rule for selected rows.

This reverts the original change and adds the extra
":not(.dirty):not(.selected)" specifiers to the forced-color rules so
that they will have the correct precedence w.r.t the to normal rules
and each other.

Data grid row colors now work as expected in both normal and high
contrast color modes. There is no special hovering behavior in normal
mode, and both hovered and selected rows are highlighted in high
contrast mode.

Bug: None
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3965671
Commit-Queue: Brandon Walderman <brwalder@microsoft.com>

--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -92,8 +92,8 @@
   display: table-row;
 }
 
-.striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd):not(.dirty):not(.selected):not(:hover),
-.striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even):not(.dirty):not(.selected):not(:hover) {
+.striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd):not(.dirty):not(.selected),
+.striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even):not(.dirty):not(.selected) {
   background-color: var(--color-background-elevation-1);
 }
 
@@ -308,8 +308,8 @@
     background-color: HighlightText;
   }
 
-  .striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd),
-  .striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even),
+  .striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd):not(.dirty):not(.selected),
+  .striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even):not(.dirty):not(.selected),
   .request-cookies-view tr.revealed.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(2n),
   .cookies-table tr.revealed.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(odd) {
     background-color: canvas;
@@ -323,8 +323,8 @@
   .data-grid th.sortable:hover,
   .data-grid tbody tr.revealed:hover,
   .data-grid tbody tr.revealed.selected,
-  .striped-data-grid .revealed:hover.data-grid-data-grid-node:nth-child(odd),
-  .striped-data-grid-starts-with-odd .revealed:hover.data-grid-data-grid-node:nth-child(even),
+  .striped-data-grid .revealed:hover.data-grid-data-grid-node:nth-child(odd):not(.dirty):not(.selected),
+  .striped-data-grid-starts-with-odd .revealed:hover.data-grid-data-grid-node:nth-child(even):not(.dirty):not(.selected),
   .request-cookies-view tr.revealed:hover.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(2n),
   .cookies-table tr.revealed:hover.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(odd) {
     forced-color-adjust: none;
